@@ -111,5 +111,6 @@ void setLocations()
 
     GPP = "g++ --std=c++0x";
     GCC = "gcc";
+//    GPP = "g++-4.4 --std=c++0x";
+//    GCC = "gcc-4.4";
 }
-
