@@ -1,2 +1,2 @@
-VERSION=2.04.01
+VERSION=2.04.02
 YEARS=2005-2009
