@@ -375,8 +375,8 @@ BigInt const operator/(BigInt const &lhs, BigInt const &rhs);
 BigInt const operator%(BigInt const &lhs, BigInt const &rhs);
 BigInt const operator+(BigInt const &lhs, BigInt const &rhs);
 BigInt const operator-(BigInt const &lhs, BigInt const &rhs);
-BigInt const operator>>(BigInt const &lhs, BigInt const &rhs);
-BigInt const operator<<(BigInt const &lhs, BigInt const &rhs);
+BigInt const operator>>(BigInt const &lhs, size_t rhs);
+BigInt const operator<<(BigInt const &lhs, size_t rhs);
 BigInt const operator|(BigInt const &lhs, BigInt const &rhs);
 BigInt const operator&(BigInt const &lhs, BigInt const &rhs);
 BigInt const operator^(BigInt const &lhs, BigInt const &rhs);
