@@ -1,9 +1,12 @@
 #!/bin/bash
 
-# CMD="g++ -o driver -Wall -I../ driver.cc -L../tmp -ldatetime -L../../tmp/lib -lbobcat -s"
+# CMD="g++ --std=c++0x -o driver -Wall -I../ driver.cc  -L../tmp -ldatetime -L../../tmp/lib -lbobcat -s"
+
+CMD="g++ --std=c++0x -o driver -Wall -I../ driver.cc  -L../tmp -ldatetime -lbobcat -s"
+
 # CMD="g++ -o driver -Wall -I../../tmp driver.cc -L../../tmp/lib -lbobcat -s"
 
-CMD="g++ -o driver -Wall *.cc -lbobcat -s"
+#CMD="g++ -o driver -Wall *.cc -lbobcat -s"
 
 echo $CMD
 $CMD
