@@ -33,6 +33,7 @@ class DecryptBuf: public std::streambuf
     private:
         void update();
         void open();
+        void installKey(std::string const &key, size_t length);
         int overflow(int c);
 };
 
