@@ -4,6 +4,8 @@
 #include <bobcat/encryptbuf>
 #include <bobcat/ohexstreambuf>
 
+#include <openssl/evp.h>
+
 using namespace std;
 using namespace FBB;
 
@@ -11,21 +13,21 @@ int main(int argc, char **argv)
 try
 {
     if (argc == 1)
-        throw Errno("1st arg: method, 2nd arg: key, 3rd arg: file to "
-                    "encrypt (to stdout), 4th arg (opt): iv");
+        throw Errno("1st arg: method, 2nd arg: key, 3rd arg:  (opt): iv, "
+                    "stdin: file to encrypt (to stdout)");
 
     string key(argv[2]);
     string iv;
 
-    if (argc > 4)
-        iv = argv[4];
+    if (argc > 3)
+        iv = argv[3];
 
     EncryptBuf encryptbuf(cout, argv[1], key, iv);
     ostream out(&encryptbuf);
-    ifstream in(argv[3]);
 
     cerr << "Block length: " << encryptbuf.blockLength() << '\n' <<
             "Key length: " << encryptbuf.keyLength() << '\n' <<
+            "Max Key length: " << EVP_MAX_KEY_LENGTH << '\n' <<
             "IV length: " << encryptbuf.ivLength() << endl;
             
     cerr << encryptbuf.iv().length() << ' ';
@@ -36,7 +38,7 @@ try
     ohs.write(encryptbuf.iv().data(), encryptbuf.iv().length()) << flush;
     cerr << endl;
 
-    out << in.rdbuf();
+    out << cin.rdbuf();
 }
 catch(Errno const &err)
 {
