@@ -1,3 +1,14 @@
+bobcat (2.04.02)
+
+  * DateTime: DST updated by setXXX() members as well.
+  * EncryptBuf/DecryptBuf now correctly set keylength
+  * EncryptBuf's manpage shows key/block sizes in bytes and provides an
+    illustration showing how to discard initial bytes (commonly used with RC4)
+  * DecryptBuf's requirement of non-empty IV vector has been dropped
+  * Repaired Debian bug #546374, reported by Stefan Ebner
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 13 Sep 2009 11:38:18 +0200
+
 bobcat (2.04.01)
 
   * Some OpenSSL functions (HMAC, Digest) needed unsigned 'int *'s. They got
